checkstyle partially auto fixed